Update form styles to make input fields resize correctly on mobile screens.

--- a/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
+++ b/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
@@ -19,6 +19,11 @@
 	margin: 0px 0 50px 0;
 }
 
+.FormWrapper {
+    min-width: 280px;
+    max-width: 410px;
+}
+
 .Input {
     background: #ffffff;
     border: 1px solid #f0f1f9;
@@ -27,15 +32,14 @@
     color: #797979;
     text-align: center;
     padding: 10px;
-	width: 395px;
-    min-width: 220px;
+    width: 100%;
     display: block;
 }
   
 .Header {
     font-style: normal;
     font-weight: bold;
-    line-height: 19px;
+    line-height: 40px;
     text-align: center;
     letter-spacing: 0.2em;
     text-transform: uppercase;
